--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
             <h2>Contact</h2>
-            <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+            <p>We provide high quality genuine handmade products made with love in the given time by the professionals.</p>
 
           </div>
         </div>
@@ -178,7 +178,7 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>14/5 A civil lines Kanpur (208001) | INDIA</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -188,7 +188,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>zirconoverseas@gmail.com</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -198,7 +198,7 @@
               <i class="bi bi-phone flex-shrink-0"></i>
               <div>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55</p>
+                <p>+91-7078008727</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -208,7 +208,7 @@
         <div class="row justify-content-center mt-4">
 
           <div class="col-lg-9">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="#link here" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
