--- a/bbs.html
+++ b/bbs.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MARTINGLE</title>
+  <title>BELL BOOTS</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -45,7 +45,7 @@
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <i class="bi bi-horse"></i>
-        <h1>CHAPS</h1>
+        <h1>EQUISTALLION</h1>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -160,18 +160,18 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/Other Saddlery Products/Chaps/chaps.jpg" class="img-fluid" alt="">
+              <img src="assets/img/Other Saddlery Products/Bell boots/bell boots (2).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/Other Saddlery Products/Chaps/chaps.jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/Other Saddlery Products/Bell boots/bell boots (2).jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/Other Saddlery Products/Chaps/WhatsApp Image 2020-09-07 at 6.36.43 PM (1).jpeg" class="img-fluid" alt="">
+              <img src="assets/img/Other Saddlery Products/Bell boots/bell boots.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/Other Saddlery Products/Chaps/WhatsApp Image 2020-09-07 at 6.36.43 PM (1).jpeg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/Other Saddlery Products/Bell boots/bell boots.jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
@@ -194,7 +194,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-4 col-md-6">
+          <!--<div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
               <img src="assets/img/gallery/gallery-5.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
