--- a/index.html
+++ b/index.html
@@ -109,17 +109,17 @@
           <li class="dropdown"><a href="#"><span>others</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="phb.html">Polo Halters & Belts</a></li>
-              <li><a href="">Boots</a></li>
-              <li><a href="">Chaps</a></li>
-              <li><a href="">Rope Halter</a></li>
-              <li><a href="">Rugs</a></li>
-              <li><a href="">Covers</a></li>
-              <li><a href="">Bandages</a></li>
-              <li><a href="">Fly Veli</a></li>
-              <li><a href="">Haynet</a></li>
-              <li><a href="">Bell Boots</a></li>
-              <li><a href="">Blankets</a></li>
-              <li><a href="">Saddle</a></li>
+              <li><a href="b.html">Boots</a></li>
+              <li><a href="ch.html">Chaps</a></li>
+              <li><a href="rh.html">Rope Halter</a></li>
+              <li><a href="r.html">Rugs</a></li>
+              <li><a href="co.html">Covers</a></li>
+              <li><a href="ban.html">Bandages</a></li>
+              <li><a href="fv.html">Fly Veli</a></li>
+              <li><a href="hay.html">Haynet</a></li>
+              <li><a href="bb.html">Bell Boots</a></li>
+              <li><a href="bla.html">Blankets</a></li>
+              <li><a href="sa.html">Saddle</a></li>
             </ul>
           </li>
 
