--- a/r.html
+++ b/r.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MARTINGLE</title>
+  <title>RUGS</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -160,32 +160,32 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/Other Saddlery Products/Polo Halters & Belts/Polo Belt (1).jpg" class="img-fluid" alt="">
+              <img src="assets/img/Other Saddlery Products/Rugs/rugs (1).jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/Other Saddlery Products/Polo Halters & Belts/Polo Belt (1).jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/Other Saddlery Products/Rugs/rugs (1).jpeg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/Other Saddlery Products/Polo Halters & Belts/Polo Belt (2).jpg" class="img-fluid" alt="">
+              <img src="assets/img/Other Saddlery Products/Rugs/rugs (1).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/Other Saddlery Products/Polo Halters & Belts/Polo Belt (2).jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/Other Saddlery Products/Rugs/rugs (1).jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
          <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/Other Saddlery Products/Polo Halters & Belts/Polo Halter (2).jpg" class="img-fluid" alt="">
+              <img src="assets/img/Other Saddlery Products/Rugs/rugs (2).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/Other Saddlery Products/Polo Halters & Belts/Polo Halter (2).jpg" title="Gallery 3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/Other Saddlery Products/Rugs/rugs (2).jpg" title="Gallery 3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-4 col-md-6">
+          <!--<div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
               <img src="assets/img/Other Saddlery Products/Polo Halters & Belts/Polo Halter (3).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
